--- a/index.html
+++ b/index.html
@@ -14,183 +14,197 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-navigation">
-        <a
-          href="./index.html"
-          target="_self"
-          rel="noopener noreferrer"
-          class="main-link"
-        >
-          <!-- <img src="./images/Logo.svg" alt="Logo" -->
-          WEB<span style="color: #2e2f42">STUDIO</span>
-        </a>
-        <ul class="header-list list">
-          <li class="header-item">
-            <a
-              class="header-link current-page link"
-              href="./index.html"
-              target="_self"
-              rel="noopener noreferrer"
-              >Studio</a
+      <div class="container container-header">
+        <nav class="header-navigation">
+          <a
+            class="header-logo"
+            href="./index.html"
+            target="_self"
+            rel="noopener noreferrer"
+          >
+            <span class="web-logo">WEB</span
+            ><span class="studio-logo studio-header">STUDIO</span>
+          </a>
+          <ul class="header-list list">
+            <li class="header-item">
+              <a
+                class="header-link current-page link"
+                href="./index.html"
+                target="_self"
+                rel="noopener noreferrer"
+                >Studio</a
+              >
+            </li>
+            <li class="header-item">
+              <a
+                class="header-link link"
+                href="./portfolio.html"
+                target="_self"
+                rel="noopener noreferrer"
+                >Portfolio</a
+              >
+            </li>
+            <li class="header-item">
+              <a
+                class="header-link link"
+                href="#"
+                target="_self"
+                rel="noopener noreferrer"
+                >Contacts</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <ul class="contacts-list list">
+          <li class="contacts-item">
+            <a class="contacts-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
             >
           </li>
-          <li class="header-item">
-            <a
-              class="header-link link"
-              href="./portfolio.html"
-              target="_self"
-              rel="noopener noreferrer"
-              >Portfolio</a
-            >
-          </li>
-          <li class="header-item">
-            <a
-              class="header-link link"
-              href="#"
-              target="_self"
-              rel="noopener noreferrer"
-              >Contacts</a
+          <li class="contacts-item">
+            <a class="contacts-link link" href="tel:+110001111111"
+              >+11 000 111 11 11</a
             >
           </li>
         </ul>
-      </nav>
-      <ul class="contacts-list list">
-        <li class="contacts-item">
-          <a class="contacts-link link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="contacts-item">
-          <a class="contacts-link link" href="tel:+110001111111"
-            >+11 000 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
-      <section class="hero">
-        <h1 class="hero-title">Effective Solutions for <br />Your Business</h1>
-        <button class="order-button button-order" type="button">
-          Order Service
-        </button>
+      <section class="hero-section">
+        <div class="container container-hero">
+          <h1 class="hero-title">
+            Effective Solutions for <br />Your Business
+          </h1>
+          <button class="hero-button button" type="button">
+            Order Service
+          </button>
+        </div>
       </section>
 
-      <section class="feature">
-        <ul class="feature-list list">
-          <li class="feature-item">
-            <h3 class="feature-item-title title-item">Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="feature-item-title title-item">Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="feature-item-title title-item">Diligence</h3>
-            <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="feature-item-title title-item">Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="feature section">
+        <div class="container container-feature">
+          <ul class="feature-list list">
+            <li class="feature-item">
+              <h3 class="feature-item-title title-item">Strategy</h3>
+              <p>
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-item-title title-item">Punctuality</h3>
+              <p>
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-item-title title-item">Diligence</h3>
+              <p>
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-item-title title-item">Technologies</h3>
+              <p>
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="services">
-        <h2 class="services-title section-title">What are we doing</h2>
-        <ul class="services-list list">
-          <li class="services-item">
-            <img
-              src="./images/what-we-do-desktop.jpg"
-              alt="computer image"
-              width="360"
-            />
-          </li>
-          <li class="services-item">
-            <img
-              src="./images/what-we-do-mobile-app.jpg"
-              alt="mobile app image"
-              width="360"
-            />
-          </li>
-          <li class="services-item">
-            <img
-              src="./images/what-we-do-phone.jpg"
-              alt="moble phone image"
-              width="360"
-            />
-          </li>
-        </ul>
+      <section class="services section">
+        <div class="container container-services">
+          <h2 class="services-title section-title">What are we doing</h2>
+          <ul class="services-list list">
+            <li class="services-item">
+              <img
+                src="./images/what-we-do-desktop.jpg"
+                alt="computer image"
+                width="360"
+              />
+            </li>
+            <li class="services-item">
+              <img
+                src="./images/what-we-do-mobile-app.jpg"
+                alt="mobile app image"
+                width="360"
+              />
+            </li>
+            <li class="services-item">
+              <img
+                src="./images/what-we-do-phone.jpg"
+                alt="moble phone image"
+                width="360"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="team">
-        <h2 class="team-title section-title">Our Team</h2>
-        <ul class="team-list list">
-          <li class="team-item">
-            <img
-              src="./images/team-1.jpg"
-              alt="mark guerrero picture"
-              width="264"
-            />
-            <h3 class="team-item-title title-item">Mark Geurrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team-2.jpg"
-              alt="tom ford picture="
-              width="264"
-            />
-            <h3 class="team-item-title title-item">Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team-3.jpg"
-              alt="camila garcia picture"
-              width="264"
-            />
-            <h3 class="team-item-title title-item">Camila Garcia</h3>
-            <p>Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team-4.jpg"
-              alt="daniel wilson picture"
-              width="264"
-            />
-            <h3 class="team-item-title title-item">Daniel Wilson</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
+      <section class="team section">
+        <div class="container container-team">
+          <h2 class="team-title section-title">Our Team</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img
+                src="./images/team-1.jpg"
+                alt="mark guerrero picture"
+                width="264"
+              />
+              <h3 class="team-item-title title-item">Mark Geurrero</h3>
+              <p>Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team-2.jpg"
+                alt="tom ford picture="
+                width="264"
+              />
+              <h3 class="team-item-title title-item">Tom Ford</h3>
+              <p>Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team-3.jpg"
+                alt="camila garcia picture"
+                width="264"
+              />
+              <h3 class="team-item-title title-item">Camila Garcia</h3>
+              <p>Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team-4.jpg"
+                alt="daniel wilson picture"
+                width="264"
+              />
+              <h3 class="team-item-title title-item">Daniel Wilson</h3>
+              <p>UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a
-        href="./index.html"
-        target="_self"
-        rel="noopener noreferrer"
-        class="main-link"
-      >
-        <!-- <img src="./images/Logo.svg" alt="Logo"/> -->
-        WEB<span style="color: #f4f4fd">STUDIO</span>
-      </a>
-      <p class="footer-item-text">
-        Increase the flow of customers and <br />sales for your business with
-        digital <br />marketing & growth solutions.
-      </p>
+      <div class="container container-footer">
+        <a
+          class="footer-logo"
+          href="./index.html"
+          target="_self"
+          rel="noopener noreferrer"
+        >
+          <span class="web-logo">WEB</span
+          ><span class="studio-logo studio-footer">STUDIO</span>
+        </a>
+        <p class="footer-item-text">
+          Increase the flow of customers and <br />sales for your business with
+          digital <br />marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
