--- a/portfolio.html
+++ b/portfolio.html
@@ -16,13 +16,13 @@
     <header class="header">
       <nav class="header-navigation">
         <a
+          class="header-logo"
           href="./index.html"
           target="_self"
           rel="noopener noreferrer"
-          class="main-link"
         >
-          <!-- <img src="./images/Logo.svg" alt="Logo" -->
-          WEB<span style="color: #2e2f42">STUDIO</span>
+          <span class="web-logo">WEB</span
+          ><span class="studio-logo studio-header">STUDIO</span>
         </a>
         <ul class="header-list list">
           <li class="header-item">
@@ -68,7 +68,7 @@
       </ul>
     </header>
     <main>
-      <section class="projects">
+      <section class="projects section">
         <ul class="port-buttons-list list">
           <li class="port-buttons-item">
             <button
@@ -187,13 +187,13 @@
     </main>
     <footer class="footer">
       <a
+        class="footer-logo"
         href="./index.html"
         target="_self"
         rel="noopener noreferrer"
-        class="main-link"
       >
-        <!-- <img src="./images/Logo.svg" alt="Logo"/> -->
-        WEB<span style="color: #f4f4fd">STUDIO</span>
+        <span class="web-logo">WEB</span
+        ><span class="studio-logo studio-footer">STUDIO</span>
       </a>
       <p class="footer-item-text">
         Increase the flow of customers and <br />sales for your business with
