--- a/index.html
+++ b/index.html
@@ -87,29 +87,29 @@
             <li class="feature-item">
               <h3 class="feature-item-title title-item">Strategy</h3>
               <p>
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
+                Our goal is to identify the business<br />problem to walk away
+                with the<br />perfect and creative solution.
               </p>
             </li>
             <li class="feature-item">
               <h3 class="feature-item-title title-item">Punctuality</h3>
               <p>
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
+                Bring the key message to the<br />brand's audience for the best
+                <br />price within the shortest possible time.
               </p>
             </li>
             <li class="feature-item">
               <h3 class="feature-item-title title-item">Diligence</h3>
               <p>
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
+                Research and confirm brands that<br />present the strongest
+                digital growth<br />opportunities and minimize risk.
               </p>
             </li>
             <li class="feature-item">
               <h3 class="feature-item-title title-item">Technologies</h3>
               <p>
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
+                Design practice focused on digital<br />experiences. We bring
+                forth a deep<br />passion for problem-solving.
               </p>
             </li>
           </ul>
