--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
-
     <link rel="stylesheet" href="./css/style.css" />
-
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap"
       rel="stylesheet"
     />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+  />
   </head>
   <body>
     <header class="header">
       <div class="container container-header">
         <nav class="header-navigation">
           <a
-            class="header-logo"
+            class="header-logo link"
             href="./index.html"
             target="_self"
             rel="noopener noreferrer"
@@ -63,7 +65,7 @@
           </li>
           <li class="contacts-item">
             <a class="contacts-link link" href="tel:+110001111111"
-              >+11 000 111 11 11</a
+              >+11 (000) 111-11-11</a
             >
           </li>
         </ul>
@@ -73,7 +75,7 @@
       <section class="hero-section">
         <div class="container container-hero">
           <h1 class="hero-title">
-            Effective Solutions for <br />Your Business
+            Effective Solutions<br />for Your Business
           </h1>
           <button class="hero-button button" type="button">
             Order Service
@@ -81,42 +83,42 @@
         </div>
       </section>
 
-      <section class="feature section">
+      <section class="section feature">
         <div class="container container-feature">
           <ul class="feature-list list">
             <li class="feature-item">
               <h3 class="feature-item-title title-item">Strategy</h3>
-              <p>
-                Our goal is to identify the business<br />problem to walk away
-                with the<br />perfect and creative solution.
+              <p class="feature-item text-item">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
               </p>
             </li>
             <li class="feature-item">
               <h3 class="feature-item-title title-item">Punctuality</h3>
-              <p>
-                Bring the key message to the<br />brand's audience for the best
-                <br />price within the shortest possible time.
+              <p class="feature-item text-item">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
               </p>
             </li>
             <li class="feature-item">
               <h3 class="feature-item-title title-item">Diligence</h3>
-              <p>
-                Research and confirm brands that<br />present the strongest
-                digital growth<br />opportunities and minimize risk.
+              <p class="feature-item text-item">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
               </p>
             </li>
             <li class="feature-item">
               <h3 class="feature-item-title title-item">Technologies</h3>
-              <p>
-                Design practice focused on digital<br />experiences. We bring
-                forth a deep<br />passion for problem-solving.
+              <p class="feature-item text-item">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
               </p>
             </li>
           </ul>
         </div>
       </section>
 
-      <section class="services section">
+      <section class="section services-no-padding-top">
         <div class="container container-services">
           <h2 class="services-title section-title">What are we doing</h2>
           <ul class="services-list list">
@@ -125,6 +127,7 @@
                 src="./images/what-we-do-desktop.jpg"
                 alt="computer image"
                 width="360"
+                height="300"
               />
             </li>
             <li class="services-item">
@@ -132,6 +135,7 @@
                 src="./images/what-we-do-mobile-app.jpg"
                 alt="mobile app image"
                 width="360"
+                height="300"
               />
             </li>
             <li class="services-item">
@@ -139,13 +143,14 @@
                 src="./images/what-we-do-phone.jpg"
                 alt="moble phone image"
                 width="360"
+                height="300"
               />
             </li>
           </ul>
         </div>
       </section>
 
-      <section class="team section">
+      <section class="section team">
         <div class="container container-team">
           <h2 class="team-title section-title">Our Team</h2>
           <ul class="team-list list">
@@ -154,36 +159,48 @@
                 src="./images/team-1.jpg"
                 alt="mark guerrero picture"
                 width="264"
+                height="260"
               />
-              <h3 class="team-item-title title-item">Mark Geurrero</h3>
-              <p>Product Designer</p>
+              <div class="card-team-text">
+                <h3 class="team-item-title title-item">Mark Geurrero</h3>
+                <p class="team-item-text text-item">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
                 src="./images/team-2.jpg"
-                alt="tom ford picture="
+                alt="tom ford picture"
                 width="264"
+                height="260"
               />
-              <h3 class="team-item-title title-item">Tom Ford</h3>
-              <p>Frontend Developer</p>
+              <div class="card-team-text">
+                <h3 class="team-item-title title-item">Tom Ford</h3>
+                <p class="team-item-text text-item">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
                 src="./images/team-3.jpg"
                 alt="camila garcia picture"
                 width="264"
+                height="260"
               />
-              <h3 class="team-item-title title-item">Camila Garcia</h3>
-              <p>Marketing</p>
+              <div class="card-team-text">
+                <h3 class="team-item-title title-item">Camila Garcia</h3>
+                <p class="team-item-text text-item">Marketing</p>
+              </div>     
             </li>
             <li class="team-item">
               <img
                 src="./images/team-4.jpg"
                 alt="daniel wilson picture"
                 width="264"
+                height="260"
               />
-              <h3 class="team-item-title title-item">Daniel Wilson</h3>
-              <p>UI Designer</p>
+              <div class="card-team-text">
+                <h3 h3 class="team-item-title title-item">Daniel Wilson</h3>
+                <p class="team-item-text text-item">UI Designer</p>
+              </div>  
             </li>
           </ul>
         </div>
@@ -192,7 +209,7 @@
     <footer class="footer">
       <div class="container container-footer">
         <a
-          class="footer-logo"
+          class="footer-logo link"
           href="./index.html"
           target="_self"
           rel="noopener noreferrer"
