--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-
     <link rel="stylesheet" href="./css/style.css" />
-
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap"
       rel="stylesheet"
@@ -14,61 +12,64 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-navigation">
-        <a
-          class="header-logo"
-          href="./index.html"
-          target="_self"
-          rel="noopener noreferrer"
-        >
-          <span class="web-logo">WEB</span
-          ><span class="studio-logo studio-header">STUDIO</span>
-        </a>
-        <ul class="header-list list">
-          <li class="header-item">
-            <a
-              class="header-link link"
-              href="./index.html"
-              target="_self"
-              rel="noopener noreferrer"
-              >Studio</a
+      <div class="container container-header">
+        <nav class="header-navigation">
+          <a
+            class="header-logo link"
+            href="./index.html"
+            target="_self"
+            rel="noopener noreferrer"
+          >
+            <span class="web-logo">WEB</span
+            ><span class="studio-logo studio-header">STUDIO</span>
+          </a>
+          <ul class="header-list list">
+            <li class="header-item">
+              <a
+                class="header-link link"
+                href="./index.html"
+                target="_self"
+                rel="noopener noreferrer"
+                >Studio</a
+              >
+            </li>
+            <li class="header-item">
+              <a
+                class="header-link current-page link"
+                href="./portfolio.html"
+                target="_self"
+                rel="noopener noreferrer"
+                >Portfolio</a
+              >
+            </li>
+            <li class="header-item">
+              <a
+                class="header-link link"
+                href="#"
+                target="_self"
+                rel="noopener noreferrer"
+                >Contacts</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <ul class="contacts-list list">
+          <li class="contacts-item">
+            <a class="contacts-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
             >
           </li>
-          <li class="header-item">
-            <a
-              class="header-link current-page link"
-              href="./portfolio.html"
-              target="_self"
-              rel="noopener noreferrer"
-              >Portfolio</a
-            >
-          </li>
-          <li class="header-item">
-            <a
-              class="header-link link"
-              href="#"
-              target="_self"
-              rel="noopener noreferrer"
-              >Contacts</a
+          <li class="contacts-item">
+            <a class="contacts-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
             >
           </li>
         </ul>
-      </nav>
-      <ul class="contacts-list list">
-        <li class="contacts-item">
-          <a class="contacts-link link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="contacts-item">
-          <a class="contacts-link link" href="tel:+110001111111"
-            >+11 000 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
-      <section class="projects section">
+      <section class="section projects-no-padding-top">
+        <div class="container projects-buttons">
         <ul class="port-buttons-list list">
           <li class="port-buttons-item">
             <button
@@ -99,7 +100,9 @@
             </button>
           </li>
         </ul>
+      </div>
 
+      <div class="container projects-list">
         <ul class="projects-list list">
           <li class="projects-item">
             <img
@@ -110,7 +113,7 @@
             <h3 class="projects-item-title title-item">
               Banking App Interface Concep
             </h3>
-            <p>App</p>
+            <p class="projects-item-text text-item">App</p>
           </li>
           <li class="projects-item">
             <img
@@ -119,7 +122,7 @@
               width="360"
             />
             <h3 class="projects-item-title title-item">Cashless Payment</h3>
-            <p>Marketing</p>
+            <p class="projects-item-text text-item">Marketing</p>
           </li>
           <li class="projects-item">
             <img
@@ -128,7 +131,7 @@
               width="360"
             />
             <h3 class="projects-item-title title-item">Meditation App</h3>
-            <p>App</p>
+            <p class="projects-item-text text-item">App</p>
           </li>
           <li class="projects-item">
             <img
@@ -137,7 +140,7 @@
               width="360"
             />
             <h3 class="projects-item-title title-item">Taxi Service</h3>
-            <p>Marketing</p>
+            <p class="projects-item-text text-item">Marketing</p>
           </li>
           <li class="projects-item">
             <img
@@ -146,7 +149,7 @@
               width="360"
             />
             <h3 class="projects-item-title title-item">Screen Illustrations</h3>
-            <p>Design</p>
+            <p class="projects-item-text text-item">Design</p>
           </li>
           <li class="projects-item">
             <img
@@ -155,7 +158,7 @@
               width="360"
             />
             <h3 class="projects-item-title title-item">Online Courses</h3>
-            <p>Marketing</p>
+            <p class="projects-item-text text-item">Marketing</p>
           </li>
           <li class="projects-item">
             <img
@@ -166,7 +169,7 @@
             <h3 class="projects-item-title title-item">
               Instagram Stories Concept
             </h3>
-            <p>Design</p>
+            <p class="projects-item-text text-item">Design</p>
           </li>
           <li class="projects-item">
             <img
@@ -175,30 +178,33 @@
               width="360"
             />
             <h3 class="projects-item-title title-item">Organic Food</h3>
-            <p>Web Site</p>
+            <p class="projects-item-text text-item">Web Site</p>
           </li>
           <li class="projects-item">
             <img src="./images/port-image-9.jpg" alt="Coffee" width="360" />
             <h3 class="projects-item-title title-item">Fresh Coffee</h3>
-            <p>Web Site</p>
+            <p class="projects-item-text text-item">Web Site</p>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <footer class="footer">
-      <a
-        class="footer-logo"
-        href="./index.html"
-        target="_self"
-        rel="noopener noreferrer"
-      >
-        <span class="web-logo">WEB</span
-        ><span class="studio-logo studio-footer">STUDIO</span>
-      </a>
-      <p class="footer-item-text">
-        Increase the flow of customers and <br />sales for your business with
-        digital <br />marketing & growth solutions.
-      </p>
+      <div class="container container-footer">
+        <a
+          class="footer-logo link"
+          href="./index.html"
+          target="_self"
+          rel="noopener noreferrer"
+        >
+          <span class="web-logo">WEB</span
+          ><span class="studio-logo studio-footer">STUDIO</span>
+        </a>
+        <p class="footer-item-text">
+          Increase the flow of customers and <br />sales for your business with
+          digital <br />marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
