--- a/index.html
+++ b/index.html
@@ -89,29 +89,25 @@
             <li class="feature-item">
               <h3 class="feature-item-title title-item">Strategy</h3>
               <p class="feature-item text-item">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
+                Our goal is to identify the business problem to walk away with the perfect and creative solution.
               </p>
             </li>
             <li class="feature-item">
               <h3 class="feature-item-title title-item">Punctuality</h3>
               <p class="feature-item text-item">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
+                Bring the key message to the brand's audience for the best price within the shortest possible time.
               </p>
             </li>
             <li class="feature-item">
               <h3 class="feature-item-title title-item">Diligence</h3>
               <p class="feature-item text-item">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
+                Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
               </p>
             </li>
             <li class="feature-item">
               <h3 class="feature-item-title title-item">Technologies</h3>
               <p class="feature-item text-item">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
+                Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
               </p>
             </li>
           </ul>
