--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <section class="hero-section">
         <div class="container container-hero">
           <h1 class="hero-title">
-            Effective Solutions<br />for Your Business
+            BRYAN EUGENIO
           </h1>
           <button class="hero-button button" type="button">
             Order Service
